# samos_schemer

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.org  samos_cmake_functions.cmake  samos_config.hpp  samos_config.hpp.in  uncrustify.cfg
data/: CMakeLists.txt  example.scm  kelyphos.cfg.scm
data/tests/: test_assq.scm  test_config.scm
src/: CMakeLists.txt  kelyphos.cpp  lib_samos.cpp  lib_samos.hpp  metaforeas.cpp  samos.cpp
src/config_manager/: CMakeLists.txt
src/config_manager/include/: config_manager.hpp
src/config_manager/src/: config_manager.cpp
src/config_manager/test/: test_config_manager.cpp
src/log/logger/: CMakeLists.txt
src/log/logger/include/: logger.hpp
src/log/logger/src/: logger.cpp
src/log/logger/test/: test_logger.cpp
src/result/: CMakeLists.txt
src/result/include/: result.hpp
src/result/test/: test_result.cpp
src/scheme/: CMakeLists.txt
src/scheme/include/: scheme.hpp  scheme_module.hpp
src/scheme/src/: scheme.cpp
src/scheme/test/: test_scheme.cpp
src/user_interface/: CMakeLists.txt
src/user_interface/ed_line/: CMakeLists.txt
src/user_interface/ed_line/include/: ed_line.hpp
src/user_interface/ed_line/src/: ed_line.cpp
src/user_interface/ed_line/test/: test_ed_line.cpp
src/user_interface/kelyphos/: CMakeLists.txt
src/user_interface/kelyphos/include/: kelyphos.hpp
src/user_interface/kelyphos/src/: kelyphos.cpp
src/user_interface/kelyphos/test/: test_kelyphos.cpp
src/user_interface/metaforeas/: CMakeLists.txt
src/user_interface/metaforeas/include/: metaforeas.hpp
src/user_interface/metaforeas/src/: metaforeas.cpp
src/user_interface/metaforeas/test/: test_metaforeas.cpp
src/user_interface/option_parser/: CMakeLists.txt
src/user_interface/option_parser/include/: option_parser.hpp
src/user_interface/option_parser/src/: option_parser.cpp
src/user_interface/option_parser/test/: test_option_parser.cpp
